<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.micro.testgreengao.ui.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/id_et_name"
        android:hint="@string/stu_name"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/id_et_age"
        android:hint="@string/stu_age"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:id="@+id/id_tv_info"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_add"
        android:onClick="btnAdd"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_update"
        android:onClick="btnUpdate"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_load_all"
        android:onClick="btnLoadAll"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_delete"
        android:onClick="btnDelete"
        android:layout_height="wrap_content"/>

</LinearLayout>
